parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> bloc
Rule 2     bloc -> bloc statement SEMICOLON
Rule 3     bloc -> bloc expression SEMICOLON
Rule 4     bloc -> statement SEMICOLON
Rule 5     bloc -> expression SEMICOLON
Rule 6     bloc -> statement
Rule 7     bloc -> expression
Rule 8     param -> NAME COMA param
Rule 9     param -> NAME
Rule 10    args -> NAME COMA args
Rule 11    args -> NUMBER COMA args
Rule 12    args -> NAME
Rule 13    args -> NUMBER
Rule 14    statement -> PRINT LPAREN expression RPAREN
Rule 15    statement -> PRINT LPAREN statement RPAREN
Rule 16    statement -> PRINTSTRING LPAREN DOUBLEC NAME DOUBLEC RPAREN
Rule 17    statement -> IF LPAREN expression RPAREN LACOL bloc RACOL
Rule 18    statement -> IF LPAREN expression RPAREN LACOL bloc RACOL ELSE LACOL bloc RACOL
Rule 19    statement -> FOR LPAREN statement SEMICOLON expression SEMICOLON statement RPAREN LACOL bloc RACOL
Rule 20    statement -> WHILE LPAREN expression RPAREN LACOL bloc RACOL
Rule 21    statement -> VOIDFUNCTION NAME LPAREN RPAREN LACOL bloc RACOL
Rule 22    statement -> FUNCTION NAME LPAREN param RPAREN LACOL bloc RACOL
Rule 23    statement -> NAME LPAREN RPAREN
Rule 24    statement -> NAME LPAREN args RPAREN
Rule 25    statement -> NAME EGAL expression
Rule 26    expression -> NAME
Rule 27    expression -> expression PLUS expression
Rule 28    expression -> NAME PLUS expression
Rule 29    statement -> NAME PLUS PLUS
Rule 30    statement -> NAME MINUS MINUS
Rule 31    statement -> NAME PLUS EGAL expression
Rule 32    statement -> NAME MINUS EGAL expression
Rule 33    statement -> NAME TIMES EGAL expression
Rule 34    statement -> NAME DIVIDE EGAL expression
Rule 35    expression -> expression TIMES expression
Rule 36    expression -> expression MINUS expression
Rule 37    expression -> expression DIVIDE expression
Rule 38    expression -> expression AND expression
Rule 39    expression -> expression OR expression
Rule 40    expression -> expression LOWER expression
Rule 41    expression -> expression LOWER EGAL expression
Rule 42    expression -> expression HIGHER expression
Rule 43    expression -> expression HIGHER EGAL expression
Rule 44    expression -> LPAREN expression RPAREN
Rule 45    expression -> NUMBER

Terminals, with rules where they appear

AND                  : 38
COMA                 : 8 10 11
DIVIDE               : 34 37
DOUBLEC              : 16 16
EGAL                 : 25 31 32 33 34 41 43
ELSE                 : 18
FOR                  : 19
FUNCTION             : 22
HIGHER               : 42 43
IF                   : 17 18
LACOL                : 17 18 18 19 20 21 22
LOWER                : 40 41
LPAREN               : 14 15 16 17 18 19 20 21 22 23 24 44
MINUS                : 30 30 32 36
NAME                 : 8 9 10 12 16 21 22 23 24 25 26 28 29 30 31 32 33 34
NUMBER               : 11 13 45
OR                   : 39
PLUS                 : 27 28 29 29 31
PRINT                : 14 15
PRINTSTRING          : 16
RACOL                : 17 18 18 19 20 21 22
RPAREN               : 14 15 16 17 18 19 20 21 22 23 24 44
SEMICOLON            : 2 3 4 5 19 19
TIMES                : 33 35
VOIDFUNCTION         : 21
WHILE                : 20
error                : 

Nonterminals, with rules where they appear

args                 : 10 11 24
bloc                 : 1 2 3 17 18 18 19 20 21 22
expression           : 3 5 7 14 17 18 19 20 25 27 27 28 31 32 33 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44
param                : 8 22
start                : 0
statement            : 2 4 6 15 19 19

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . bloc
    (2) bloc -> . bloc statement SEMICOLON
    (3) bloc -> . bloc expression SEMICOLON
    (4) bloc -> . statement SEMICOLON
    (5) bloc -> . expression SEMICOLON
    (6) bloc -> . statement
    (7) bloc -> . expression
    (14) statement -> . PRINT LPAREN expression RPAREN
    (15) statement -> . PRINT LPAREN statement RPAREN
    (16) statement -> . PRINTSTRING LPAREN DOUBLEC NAME DOUBLEC RPAREN
    (17) statement -> . IF LPAREN expression RPAREN LACOL bloc RACOL
    (18) statement -> . IF LPAREN expression RPAREN LACOL bloc RACOL ELSE LACOL bloc RACOL
    (19) statement -> . FOR LPAREN statement SEMICOLON expression SEMICOLON statement RPAREN LACOL bloc RACOL
    (20) statement -> . WHILE LPAREN expression RPAREN LACOL bloc RACOL
    (21) statement -> . VOIDFUNCTION NAME LPAREN RPAREN LACOL bloc RACOL
    (22) statement -> . FUNCTION NAME LPAREN param RPAREN LACOL bloc RACOL
    (23) statement -> . NAME LPAREN RPAREN
    (24) statement -> . NAME LPAREN args RPAREN
    (25) statement -> . NAME EGAL expression
    (29) statement -> . NAME PLUS PLUS
    (30) statement -> . NAME MINUS MINUS
    (31) statement -> . NAME PLUS EGAL expression
    (32) statement -> . NAME MINUS EGAL expression
    (33) statement -> . NAME TIMES EGAL expression
    (34) statement -> . NAME DIVIDE EGAL expression
    (26) expression -> . NAME
    (27) expression -> . expression PLUS expression
    (28) expression -> . NAME PLUS expression
    (35) expression -> . expression TIMES expression
    (36) expression -> . expression MINUS expression
    (37) expression -> . expression DIVIDE expression
    (38) expression -> . expression AND expression
    (39) expression -> . expression OR expression
    (40) expression -> . expression LOWER expression
    (41) expression -> . expression LOWER EGAL expression
    (42) expression -> . expression HIGHER expression
    (43) expression -> . expression HIGHER EGAL expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . NUMBER

    PRINT           shift and go to state 5
    PRINTSTRING     shift and go to state 7
    IF              shift and go to state 9
    FOR             shift and go to state 10
    WHILE           shift and go to state 11
    VOIDFUNCTION    shift and go to state 12
    FUNCTION        shift and go to state 13
    NAME            shift and go to state 8
    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 14

    start                          shift and go to state 1
    bloc                           shift and go to state 2
    statement                      shift and go to state 3
    expression                     shift and go to state 4

state 1

    (0) S' -> start .



state 2

    (1) start -> bloc .
    (2) bloc -> bloc . statement SEMICOLON
    (3) bloc -> bloc . expression SEMICOLON
    (14) statement -> . PRINT LPAREN expression RPAREN
    (15) statement -> . PRINT LPAREN statement RPAREN
    (16) statement -> . PRINTSTRING LPAREN DOUBLEC NAME DOUBLEC RPAREN
    (17) statement -> . IF LPAREN expression RPAREN LACOL bloc RACOL
    (18) statement -> . IF LPAREN expression RPAREN LACOL bloc RACOL ELSE LACOL bloc RACOL
    (19) statement -> . FOR LPAREN statement SEMICOLON expression SEMICOLON statement RPAREN LACOL bloc RACOL
    (20) statement -> . WHILE LPAREN expression RPAREN LACOL bloc RACOL
    (21) statement -> . VOIDFUNCTION NAME LPAREN RPAREN LACOL bloc RACOL
    (22) statement -> . FUNCTION NAME LPAREN param RPAREN LACOL bloc RACOL
    (23) statement -> . NAME LPAREN RPAREN
    (24) statement -> . NAME LPAREN args RPAREN
    (25) statement -> . NAME EGAL expression
    (29) statement -> . NAME PLUS PLUS
    (30) statement -> . NAME MINUS MINUS
    (31) statement -> . NAME PLUS EGAL expression
    (32) statement -> . NAME MINUS EGAL expression
    (33) statement -> . NAME TIMES EGAL expression
    (34) statement -> . NAME DIVIDE EGAL expression
    (26) expression -> . NAME
    (27) expression -> . expression PLUS expression
    (28) expression -> . NAME PLUS expression
    (35) expression -> . expression TIMES expression
    (36) expression -> . expression MINUS expression
    (37) expression -> . expression DIVIDE expression
    (38) expression -> . expression AND expression
    (39) expression -> . expression OR expression
    (40) expression -> . expression LOWER expression
    (41) expression -> . expression LOWER EGAL expression
    (42) expression -> . expression HIGHER expression
    (43) expression -> . expression HIGHER EGAL expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . NUMBER

    $end            reduce using rule 1 (start -> bloc .)
    PRINT           shift and go to state 5
    PRINTSTRING     shift and go to state 7
    IF              shift and go to state 9
    FOR             shift and go to state 10
    WHILE           shift and go to state 11
    VOIDFUNCTION    shift and go to state 12
    FUNCTION        shift and go to state 13
    NAME            shift and go to state 8
    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 14

    statement                      shift and go to state 15
    expression                     shift and go to state 16

state 3

    (4) bloc -> statement . SEMICOLON
    (6) bloc -> statement .

    SEMICOLON       shift and go to state 17
    PRINT           reduce using rule 6 (bloc -> statement .)
    PRINTSTRING     reduce using rule 6 (bloc -> statement .)
    IF              reduce using rule 6 (bloc -> statement .)
    FOR             reduce using rule 6 (bloc -> statement .)
    WHILE           reduce using rule 6 (bloc -> statement .)
    VOIDFUNCTION    reduce using rule 6 (bloc -> statement .)
    FUNCTION        reduce using rule 6 (bloc -> statement .)
    NAME            reduce using rule 6 (bloc -> statement .)
    LPAREN          reduce using rule 6 (bloc -> statement .)
    NUMBER          reduce using rule 6 (bloc -> statement .)
    $end            reduce using rule 6 (bloc -> statement .)
    RACOL           reduce using rule 6 (bloc -> statement .)


state 4

    (5) bloc -> expression . SEMICOLON
    (7) bloc -> expression .
    (27) expression -> expression . PLUS expression
    (35) expression -> expression . TIMES expression
    (36) expression -> expression . MINUS expression
    (37) expression -> expression . DIVIDE expression
    (38) expression -> expression . AND expression
    (39) expression -> expression . OR expression
    (40) expression -> expression . LOWER expression
    (41) expression -> expression . LOWER EGAL expression
    (42) expression -> expression . HIGHER expression
    (43) expression -> expression . HIGHER EGAL expression

    SEMICOLON       shift and go to state 18
    PRINT           reduce using rule 7 (bloc -> expression .)
    PRINTSTRING     reduce using rule 7 (bloc -> expression .)
    IF              reduce using rule 7 (bloc -> expression .)
    FOR             reduce using rule 7 (bloc -> expression .)
    WHILE           reduce using rule 7 (bloc -> expression .)
    VOIDFUNCTION    reduce using rule 7 (bloc -> expression .)
    FUNCTION        reduce using rule 7 (bloc -> expression .)
    NAME            reduce using rule 7 (bloc -> expression .)
    LPAREN          reduce using rule 7 (bloc -> expression .)
    NUMBER          reduce using rule 7 (bloc -> expression .)
    $end            reduce using rule 7 (bloc -> expression .)
    RACOL           reduce using rule 7 (bloc -> expression .)
    PLUS            shift and go to state 19
    TIMES           shift and go to state 20
    MINUS           shift and go to state 21
    DIVIDE          shift and go to state 22
    AND             shift and go to state 23
    OR              shift and go to state 24
    LOWER           shift and go to state 25
    HIGHER          shift and go to state 26


state 5

    (14) statement -> PRINT . LPAREN expression RPAREN
    (15) statement -> PRINT . LPAREN statement RPAREN

    LPAREN          shift and go to state 27


state 6

    (44) expression -> LPAREN . expression RPAREN
    (26) expression -> . NAME
    (27) expression -> . expression PLUS expression
    (28) expression -> . NAME PLUS expression
    (35) expression -> . expression TIMES expression
    (36) expression -> . expression MINUS expression
    (37) expression -> . expression DIVIDE expression
    (38) expression -> . expression AND expression
    (39) expression -> . expression OR expression
    (40) expression -> . expression LOWER expression
    (41) expression -> . expression LOWER EGAL expression
    (42) expression -> . expression HIGHER expression
    (43) expression -> . expression HIGHER EGAL expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . NUMBER

    NAME            shift and go to state 29
    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 14

    expression                     shift and go to state 28

state 7

    (16) statement -> PRINTSTRING . LPAREN DOUBLEC NAME DOUBLEC RPAREN

    LPAREN          shift and go to state 30


state 8

    (23) statement -> NAME . LPAREN RPAREN
    (24) statement -> NAME . LPAREN args RPAREN
    (25) statement -> NAME . EGAL expression
    (29) statement -> NAME . PLUS PLUS
    (30) statement -> NAME . MINUS MINUS
    (31) statement -> NAME . PLUS EGAL expression
    (32) statement -> NAME . MINUS EGAL expression
    (33) statement -> NAME . TIMES EGAL expression
    (34) statement -> NAME . DIVIDE EGAL expression
    (26) expression -> NAME .
    (28) expression -> NAME . PLUS expression

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
    LPAREN          shift and go to state 31
    EGAL            shift and go to state 32
    PLUS            shift and go to state 33
    MINUS           shift and go to state 34
    TIMES           shift and go to state 35
    DIVIDE          shift and go to state 36
    SEMICOLON       reduce using rule 26 (expression -> NAME .)
    AND             reduce using rule 26 (expression -> NAME .)
    OR              reduce using rule 26 (expression -> NAME .)
    LOWER           reduce using rule 26 (expression -> NAME .)
    HIGHER          reduce using rule 26 (expression -> NAME .)
    PRINT           reduce using rule 26 (expression -> NAME .)
    PRINTSTRING     reduce using rule 26 (expression -> NAME .)
    IF              reduce using rule 26 (expression -> NAME .)
    FOR             reduce using rule 26 (expression -> NAME .)
    WHILE           reduce using rule 26 (expression -> NAME .)
    VOIDFUNCTION    reduce using rule 26 (expression -> NAME .)
    FUNCTION        reduce using rule 26 (expression -> NAME .)
    NAME            reduce using rule 26 (expression -> NAME .)
    NUMBER          reduce using rule 26 (expression -> NAME .)
    $end            reduce using rule 26 (expression -> NAME .)
    RACOL           reduce using rule 26 (expression -> NAME .)

  ! PLUS            [ reduce using rule 26 (expression -> NAME .) ]
  ! TIMES           [ reduce using rule 26 (expression -> NAME .) ]
  ! MINUS           [ reduce using rule 26 (expression -> NAME .) ]
  ! DIVIDE          [ reduce using rule 26 (expression -> NAME .) ]
  ! LPAREN          [ reduce using rule 26 (expression -> NAME .) ]


state 9

    (17) statement -> IF . LPAREN expression RPAREN LACOL bloc RACOL
    (18) statement -> IF . LPAREN expression RPAREN LACOL bloc RACOL ELSE LACOL bloc RACOL

    LPAREN          shift and go to state 37


state 10

    (19) statement -> FOR . LPAREN statement SEMICOLON expression SEMICOLON statement RPAREN LACOL bloc RACOL

    LPAREN          shift and go to state 38


state 11

    (20) statement -> WHILE . LPAREN expression RPAREN LACOL bloc RACOL

    LPAREN          shift and go to state 39


state 12

    (21) statement -> VOIDFUNCTION . NAME LPAREN RPAREN LACOL bloc RACOL

    NAME            shift and go to state 40


state 13

    (22) statement -> FUNCTION . NAME LPAREN param RPAREN LACOL bloc RACOL

    NAME            shift and go to state 41


state 14

    (45) expression -> NUMBER .

    SEMICOLON       reduce using rule 45 (expression -> NUMBER .)
    PLUS            reduce using rule 45 (expression -> NUMBER .)
    TIMES           reduce using rule 45 (expression -> NUMBER .)
    MINUS           reduce using rule 45 (expression -> NUMBER .)
    DIVIDE          reduce using rule 45 (expression -> NUMBER .)
    AND             reduce using rule 45 (expression -> NUMBER .)
    OR              reduce using rule 45 (expression -> NUMBER .)
    LOWER           reduce using rule 45 (expression -> NUMBER .)
    HIGHER          reduce using rule 45 (expression -> NUMBER .)
    PRINT           reduce using rule 45 (expression -> NUMBER .)
    PRINTSTRING     reduce using rule 45 (expression -> NUMBER .)
    IF              reduce using rule 45 (expression -> NUMBER .)
    FOR             reduce using rule 45 (expression -> NUMBER .)
    WHILE           reduce using rule 45 (expression -> NUMBER .)
    VOIDFUNCTION    reduce using rule 45 (expression -> NUMBER .)
    FUNCTION        reduce using rule 45 (expression -> NUMBER .)
    NAME            reduce using rule 45 (expression -> NUMBER .)
    LPAREN          reduce using rule 45 (expression -> NUMBER .)
    NUMBER          reduce using rule 45 (expression -> NUMBER .)
    $end            reduce using rule 45 (expression -> NUMBER .)
    RPAREN          reduce using rule 45 (expression -> NUMBER .)
    RACOL           reduce using rule 45 (expression -> NUMBER .)


state 15

    (2) bloc -> bloc statement . SEMICOLON

    SEMICOLON       shift and go to state 42


state 16

    (3) bloc -> bloc expression . SEMICOLON
    (27) expression -> expression . PLUS expression
    (35) expression -> expression . TIMES expression
    (36) expression -> expression . MINUS expression
    (37) expression -> expression . DIVIDE expression
    (38) expression -> expression . AND expression
    (39) expression -> expression . OR expression
    (40) expression -> expression . LOWER expression
    (41) expression -> expression . LOWER EGAL expression
    (42) expression -> expression . HIGHER expression
    (43) expression -> expression . HIGHER EGAL expression

    SEMICOLON       shift and go to state 43
    PLUS            shift and go to state 19
    TIMES           shift and go to state 20
    MINUS           shift and go to state 21
    DIVIDE          shift and go to state 22
    AND             shift and go to state 23
    OR              shift and go to state 24
    LOWER           shift and go to state 25
    HIGHER          shift and go to state 26


state 17

    (4) bloc -> statement SEMICOLON .

    PRINT           reduce using rule 4 (bloc -> statement SEMICOLON .)
    PRINTSTRING     reduce using rule 4 (bloc -> statement SEMICOLON .)
    IF              reduce using rule 4 (bloc -> statement SEMICOLON .)
    FOR             reduce using rule 4 (bloc -> statement SEMICOLON .)
    WHILE           reduce using rule 4 (bloc -> statement SEMICOLON .)
    VOIDFUNCTION    reduce using rule 4 (bloc -> statement SEMICOLON .)
    FUNCTION        reduce using rule 4 (bloc -> statement SEMICOLON .)
    NAME            reduce using rule 4 (bloc -> statement SEMICOLON .)
    LPAREN          reduce using rule 4 (bloc -> statement SEMICOLON .)
    NUMBER          reduce using rule 4 (bloc -> statement SEMICOLON .)
    $end            reduce using rule 4 (bloc -> statement SEMICOLON .)
    RACOL           reduce using rule 4 (bloc -> statement SEMICOLON .)


state 18

    (5) bloc -> expression SEMICOLON .

    PRINT           reduce using rule 5 (bloc -> expression SEMICOLON .)
    PRINTSTRING     reduce using rule 5 (bloc -> expression SEMICOLON .)
    IF              reduce using rule 5 (bloc -> expression SEMICOLON .)
    FOR             reduce using rule 5 (bloc -> expression SEMICOLON .)
    WHILE           reduce using rule 5 (bloc -> expression SEMICOLON .)
    VOIDFUNCTION    reduce using rule 5 (bloc -> expression SEMICOLON .)
    FUNCTION        reduce using rule 5 (bloc -> expression SEMICOLON .)
    NAME            reduce using rule 5 (bloc -> expression SEMICOLON .)
    LPAREN          reduce using rule 5 (bloc -> expression SEMICOLON .)
    NUMBER          reduce using rule 5 (bloc -> expression SEMICOLON .)
    $end            reduce using rule 5 (bloc -> expression SEMICOLON .)
    RACOL           reduce using rule 5 (bloc -> expression SEMICOLON .)


state 19

    (27) expression -> expression PLUS . expression
    (26) expression -> . NAME
    (27) expression -> . expression PLUS expression
    (28) expression -> . NAME PLUS expression
    (35) expression -> . expression TIMES expression
    (36) expression -> . expression MINUS expression
    (37) expression -> . expression DIVIDE expression
    (38) expression -> . expression AND expression
    (39) expression -> . expression OR expression
    (40) expression -> . expression LOWER expression
    (41) expression -> . expression LOWER EGAL expression
    (42) expression -> . expression HIGHER expression
    (43) expression -> . expression HIGHER EGAL expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . NUMBER

    NAME            shift and go to state 29
    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 14

    expression                     shift and go to state 44

state 20

    (35) expression -> expression TIMES . expression
    (26) expression -> . NAME
    (27) expression -> . expression PLUS expression
    (28) expression -> . NAME PLUS expression
    (35) expression -> . expression TIMES expression
    (36) expression -> . expression MINUS expression
    (37) expression -> . expression DIVIDE expression
    (38) expression -> . expression AND expression
    (39) expression -> . expression OR expression
    (40) expression -> . expression LOWER expression
    (41) expression -> . expression LOWER EGAL expression
    (42) expression -> . expression HIGHER expression
    (43) expression -> . expression HIGHER EGAL expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . NUMBER

    NAME            shift and go to state 29
    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 14

    expression                     shift and go to state 45

state 21

    (36) expression -> expression MINUS . expression
    (26) expression -> . NAME
    (27) expression -> . expression PLUS expression
    (28) expression -> . NAME PLUS expression
    (35) expression -> . expression TIMES expression
    (36) expression -> . expression MINUS expression
    (37) expression -> . expression DIVIDE expression
    (38) expression -> . expression AND expression
    (39) expression -> . expression OR expression
    (40) expression -> . expression LOWER expression
    (41) expression -> . expression LOWER EGAL expression
    (42) expression -> . expression HIGHER expression
    (43) expression -> . expression HIGHER EGAL expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . NUMBER

    NAME            shift and go to state 29
    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 14

    expression                     shift and go to state 46

state 22

    (37) expression -> expression DIVIDE . expression
    (26) expression -> . NAME
    (27) expression -> . expression PLUS expression
    (28) expression -> . NAME PLUS expression
    (35) expression -> . expression TIMES expression
    (36) expression -> . expression MINUS expression
    (37) expression -> . expression DIVIDE expression
    (38) expression -> . expression AND expression
    (39) expression -> . expression OR expression
    (40) expression -> . expression LOWER expression
    (41) expression -> . expression LOWER EGAL expression
    (42) expression -> . expression HIGHER expression
    (43) expression -> . expression HIGHER EGAL expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . NUMBER

    NAME            shift and go to state 29
    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 14

    expression                     shift and go to state 47

state 23

    (38) expression -> expression AND . expression
    (26) expression -> . NAME
    (27) expression -> . expression PLUS expression
    (28) expression -> . NAME PLUS expression
    (35) expression -> . expression TIMES expression
    (36) expression -> . expression MINUS expression
    (37) expression -> . expression DIVIDE expression
    (38) expression -> . expression AND expression
    (39) expression -> . expression OR expression
    (40) expression -> . expression LOWER expression
    (41) expression -> . expression LOWER EGAL expression
    (42) expression -> . expression HIGHER expression
    (43) expression -> . expression HIGHER EGAL expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . NUMBER

    NAME            shift and go to state 29
    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 14

    expression                     shift and go to state 48

state 24

    (39) expression -> expression OR . expression
    (26) expression -> . NAME
    (27) expression -> . expression PLUS expression
    (28) expression -> . NAME PLUS expression
    (35) expression -> . expression TIMES expression
    (36) expression -> . expression MINUS expression
    (37) expression -> . expression DIVIDE expression
    (38) expression -> . expression AND expression
    (39) expression -> . expression OR expression
    (40) expression -> . expression LOWER expression
    (41) expression -> . expression LOWER EGAL expression
    (42) expression -> . expression HIGHER expression
    (43) expression -> . expression HIGHER EGAL expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . NUMBER

    NAME            shift and go to state 29
    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 14

    expression                     shift and go to state 49

state 25

    (40) expression -> expression LOWER . expression
    (41) expression -> expression LOWER . EGAL expression
    (26) expression -> . NAME
    (27) expression -> . expression PLUS expression
    (28) expression -> . NAME PLUS expression
    (35) expression -> . expression TIMES expression
    (36) expression -> . expression MINUS expression
    (37) expression -> . expression DIVIDE expression
    (38) expression -> . expression AND expression
    (39) expression -> . expression OR expression
    (40) expression -> . expression LOWER expression
    (41) expression -> . expression LOWER EGAL expression
    (42) expression -> . expression HIGHER expression
    (43) expression -> . expression HIGHER EGAL expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . NUMBER

    EGAL            shift and go to state 51
    NAME            shift and go to state 29
    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 14

    expression                     shift and go to state 50

state 26

    (42) expression -> expression HIGHER . expression
    (43) expression -> expression HIGHER . EGAL expression
    (26) expression -> . NAME
    (27) expression -> . expression PLUS expression
    (28) expression -> . NAME PLUS expression
    (35) expression -> . expression TIMES expression
    (36) expression -> . expression MINUS expression
    (37) expression -> . expression DIVIDE expression
    (38) expression -> . expression AND expression
    (39) expression -> . expression OR expression
    (40) expression -> . expression LOWER expression
    (41) expression -> . expression LOWER EGAL expression
    (42) expression -> . expression HIGHER expression
    (43) expression -> . expression HIGHER EGAL expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . NUMBER

    EGAL            shift and go to state 53
    NAME            shift and go to state 29
    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 14

    expression                     shift and go to state 52

state 27

    (14) statement -> PRINT LPAREN . expression RPAREN
    (15) statement -> PRINT LPAREN . statement RPAREN
    (26) expression -> . NAME
    (27) expression -> . expression PLUS expression
    (28) expression -> . NAME PLUS expression
    (35) expression -> . expression TIMES expression
    (36) expression -> . expression MINUS expression
    (37) expression -> . expression DIVIDE expression
    (38) expression -> . expression AND expression
    (39) expression -> . expression OR expression
    (40) expression -> . expression LOWER expression
    (41) expression -> . expression LOWER EGAL expression
    (42) expression -> . expression HIGHER expression
    (43) expression -> . expression HIGHER EGAL expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . NUMBER
    (14) statement -> . PRINT LPAREN expression RPAREN
    (15) statement -> . PRINT LPAREN statement RPAREN
    (16) statement -> . PRINTSTRING LPAREN DOUBLEC NAME DOUBLEC RPAREN
    (17) statement -> . IF LPAREN expression RPAREN LACOL bloc RACOL
    (18) statement -> . IF LPAREN expression RPAREN LACOL bloc RACOL ELSE LACOL bloc RACOL
    (19) statement -> . FOR LPAREN statement SEMICOLON expression SEMICOLON statement RPAREN LACOL bloc RACOL
    (20) statement -> . WHILE LPAREN expression RPAREN LACOL bloc RACOL
    (21) statement -> . VOIDFUNCTION NAME LPAREN RPAREN LACOL bloc RACOL
    (22) statement -> . FUNCTION NAME LPAREN param RPAREN LACOL bloc RACOL
    (23) statement -> . NAME LPAREN RPAREN
    (24) statement -> . NAME LPAREN args RPAREN
    (25) statement -> . NAME EGAL expression
    (29) statement -> . NAME PLUS PLUS
    (30) statement -> . NAME MINUS MINUS
    (31) statement -> . NAME PLUS EGAL expression
    (32) statement -> . NAME MINUS EGAL expression
    (33) statement -> . NAME TIMES EGAL expression
    (34) statement -> . NAME DIVIDE EGAL expression

    NAME            shift and go to state 56
    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 14
    PRINT           shift and go to state 5
    PRINTSTRING     shift and go to state 7
    IF              shift and go to state 9
    FOR             shift and go to state 10
    WHILE           shift and go to state 11
    VOIDFUNCTION    shift and go to state 12
    FUNCTION        shift and go to state 13

    expression                     shift and go to state 54
    statement                      shift and go to state 55

state 28

    (44) expression -> LPAREN expression . RPAREN
    (27) expression -> expression . PLUS expression
    (35) expression -> expression . TIMES expression
    (36) expression -> expression . MINUS expression
    (37) expression -> expression . DIVIDE expression
    (38) expression -> expression . AND expression
    (39) expression -> expression . OR expression
    (40) expression -> expression . LOWER expression
    (41) expression -> expression . LOWER EGAL expression
    (42) expression -> expression . HIGHER expression
    (43) expression -> expression . HIGHER EGAL expression

    RPAREN          shift and go to state 57
    PLUS            shift and go to state 19
    TIMES           shift and go to state 20
    MINUS           shift and go to state 21
    DIVIDE          shift and go to state 22
    AND             shift and go to state 23
    OR              shift and go to state 24
    LOWER           shift and go to state 25
    HIGHER          shift and go to state 26


state 29

    (26) expression -> NAME .
    (28) expression -> NAME . PLUS expression

  ! shift/reduce conflict for PLUS resolved as shift
    RPAREN          reduce using rule 26 (expression -> NAME .)
    TIMES           reduce using rule 26 (expression -> NAME .)
    MINUS           reduce using rule 26 (expression -> NAME .)
    DIVIDE          reduce using rule 26 (expression -> NAME .)
    AND             reduce using rule 26 (expression -> NAME .)
    OR              reduce using rule 26 (expression -> NAME .)
    LOWER           reduce using rule 26 (expression -> NAME .)
    HIGHER          reduce using rule 26 (expression -> NAME .)
    SEMICOLON       reduce using rule 26 (expression -> NAME .)
    PRINT           reduce using rule 26 (expression -> NAME .)
    PRINTSTRING     reduce using rule 26 (expression -> NAME .)
    IF              reduce using rule 26 (expression -> NAME .)
    FOR             reduce using rule 26 (expression -> NAME .)
    WHILE           reduce using rule 26 (expression -> NAME .)
    VOIDFUNCTION    reduce using rule 26 (expression -> NAME .)
    FUNCTION        reduce using rule 26 (expression -> NAME .)
    NAME            reduce using rule 26 (expression -> NAME .)
    LPAREN          reduce using rule 26 (expression -> NAME .)
    NUMBER          reduce using rule 26 (expression -> NAME .)
    $end            reduce using rule 26 (expression -> NAME .)
    RACOL           reduce using rule 26 (expression -> NAME .)
    PLUS            shift and go to state 58

  ! PLUS            [ reduce using rule 26 (expression -> NAME .) ]


state 30

    (16) statement -> PRINTSTRING LPAREN . DOUBLEC NAME DOUBLEC RPAREN

    DOUBLEC         shift and go to state 59


state 31

    (23) statement -> NAME LPAREN . RPAREN
    (24) statement -> NAME LPAREN . args RPAREN
    (10) args -> . NAME COMA args
    (11) args -> . NUMBER COMA args
    (12) args -> . NAME
    (13) args -> . NUMBER

    RPAREN          shift and go to state 61
    NAME            shift and go to state 60
    NUMBER          shift and go to state 63

    args                           shift and go to state 62

state 32

    (25) statement -> NAME EGAL . expression
    (26) expression -> . NAME
    (27) expression -> . expression PLUS expression
    (28) expression -> . NAME PLUS expression
    (35) expression -> . expression TIMES expression
    (36) expression -> . expression MINUS expression
    (37) expression -> . expression DIVIDE expression
    (38) expression -> . expression AND expression
    (39) expression -> . expression OR expression
    (40) expression -> . expression LOWER expression
    (41) expression -> . expression LOWER EGAL expression
    (42) expression -> . expression HIGHER expression
    (43) expression -> . expression HIGHER EGAL expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . NUMBER

    NAME            shift and go to state 29
    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 14

    expression                     shift and go to state 64

state 33

    (29) statement -> NAME PLUS . PLUS
    (31) statement -> NAME PLUS . EGAL expression
    (28) expression -> NAME PLUS . expression
    (26) expression -> . NAME
    (27) expression -> . expression PLUS expression
    (28) expression -> . NAME PLUS expression
    (35) expression -> . expression TIMES expression
    (36) expression -> . expression MINUS expression
    (37) expression -> . expression DIVIDE expression
    (38) expression -> . expression AND expression
    (39) expression -> . expression OR expression
    (40) expression -> . expression LOWER expression
    (41) expression -> . expression LOWER EGAL expression
    (42) expression -> . expression HIGHER expression
    (43) expression -> . expression HIGHER EGAL expression
    (44) expression -> . LPAREN expression RPAREN
    (45) expression -> . NUMBER

    PLUS            shift and go to state 65
    EGAL            shift and go to state 66
    NAME            shift and go to state 29
    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 14

    expression                     shift and go to state 67

state 34

    (30) statement -> NAME MINUS . MINUS
    (32) statement -> NAME MINUS . EGAL expression
